# docs/swagger.yaml
@@ -41,10 +41,10 @@ definitions:
     properties:
       list:
         items:
-          $ref: "#/definitions/model.Article"
+          $ref: '#/definitions/model.Article'
         type: array
       pager:
-        $ref: "#/definitions/app.Pager"
+        $ref: '#/definitions/app.Pager'
     type: object
   model.CreateArticleRequest:
     properties:
@@ -66,8 +66,8 @@ definitions:
       state:
         description: 代码内可设默认值
         enum:
-          - 0
-          - 1
+        - 0
+        - 1
         example: 1
         type: integer
       title:
@@ -76,9 +76,9 @@ definitions:
         minLength: 3
         type: string
     required:
-      - content
-      - created_by
-      - title
+    - content
+    - created_by
+    - title
     type: object
   model.CreateTagRequest:
     properties:
@@ -94,13 +94,13 @@ definitions:
         type: string
       state:
         enum:
-          - 0
-          - 1
+        - 0
+        - 1
         example: 1
         type: integer
     required:
-      - created_by
-      - name
+    - created_by
+    - name
     type: object
   model.Tag:
     properties:
@@ -127,10 +127,10 @@ definitions:
     properties:
       list:
         items:
-          $ref: "#/definitions/model.Tag"
+          $ref: '#/definitions/model.Tag'
         type: array
       pager:
-        $ref: "#/definitions/app.Pager"
+        $ref: '#/definitions/app.Pager'
     type: object
   model.UpdateArticleRequest:
     properties:
@@ -151,8 +151,8 @@ definitions:
         type: string
       state:
         enum:
-          - 0
-          - 1
+        - 0
+        - 1
         example: 0
         type: integer
       title:
@@ -161,7 +161,7 @@ definitions:
         minLength: 3
         type: string
     required:
-      - modified_by
+    - modified_by
     type: object
   model.UpdateTagRequest:
     properties:
@@ -177,12 +177,12 @@ definitions:
         type: string
       state:
         enum:
-          - 0
-          - 1
+        - 0
+        - 1
         example: 1
         type: integer
     required:
-      - modified_by
+    - modified_by
     type: object
 info:
   contact: {}
@@ -194,79 +194,79 @@ paths:
   /api/v1/articles:
     get:
       parameters:
-        - description: 文章标题
-          in: query
-          maxLength: 100
-          name: title
-          type: string
-        - default: 1
-          description: 状态
-          enum:
-            - 0
-            - 1
-          in: query
-          name: state
-          type: integer
-        - description: 页码
-          in: query
-          name: page
-          type: integer
-        - description: 每页数量
-          in: query
-          name: page_size
-          type: integer
+      - description: 文章标题
+        in: query
+        maxLength: 100
+        name: title
+        type: string
+      - default: 1
+        description: 状态
+        enum:
+        - 0
+        - 1
+        in: query
+        name: state
+        type: integer
+      - description: 页码
+        in: query
+        name: page
+        type: integer
+      - description: 每页数量
+        in: query
+        name: page_size
+        type: integer
       produces:
-        - application/json
+      - application/json
       responses:
         "200":
           description: 成功
           schema:
-            $ref: "#/definitions/model.ArticleSwagger"
+            $ref: '#/definitions/model.ArticleSwagger'
         "400":
           description: 请求错误
           schema:
-            $ref: "#/definitions/errcode.Error"
+            $ref: '#/definitions/errcode.Error'
         "500":
           description: 内部错误
           schema:
-            $ref: "#/definitions/errcode.Error"
+            $ref: '#/definitions/errcode.Error'
       summary: 获取文章列表
     post:
       consumes:
-        - application/json
+      - application/json
       parameters:
-        - description: 创建文章请求
-          in: body
-          name: request
-          required: true
-          schema:
-            $ref: "#/definitions/model.CreateArticleRequest"
+      - description: 创建文章请求
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/model.CreateArticleRequest'
       produces:
-        - application/json
+      - application/json
       responses:
         "200":
           description: 成功
           schema:
-            $ref: "#/definitions/model.ArticleSwagger"
+            $ref: '#/definitions/model.ArticleSwagger'
         "400":
           description: 请求错误
           schema:
-            $ref: "#/definitions/errcode.Error"
+            $ref: '#/definitions/errcode.Error'
         "500":
           description: 内部错误
           schema:
-            $ref: "#/definitions/errcode.Error"
+            $ref: '#/definitions/errcode.Error'
       summary: 新增文章
   /api/v1/articles/{id}:
     delete:
       parameters:
-        - description: 文章ID
-          in: path
-          name: id
-          required: true
-          type: integer
+      - description: 文章ID
+        in: path
+        name: id
+        required: true
+        type: integer
       produces:
-        - application/json
+      - application/json
       responses:
         "200":
           description: 成功
@@ -275,140 +275,140 @@ paths:
         "400":
           description: 请求错误
           schema:
-            $ref: "#/definitions/errcode.Error"
+            $ref: '#/definitions/errcode.Error'
         "500":
           description: 内部错误
           schema:
-            $ref: "#/definitions/errcode.Error"
+            $ref: '#/definitions/errcode.Error'
       summary: 删除文章
     get:
       parameters:
-        - description: 文章ID
-          in: path
-          name: id
-          required: true
-          type: integer
+      - description: 文章ID
+        in: path
+        name: id
+        required: true
+        type: integer
       produces:
-        - application/json
+      - application/json
       responses:
         "200":
           description: 成功
           schema:
-            $ref: "#/definitions/model.ArticleSwagger"
+            $ref: '#/definitions/model.ArticleSwagger'
         "400":
           description: 请求错误
           schema:
-            $ref: "#/definitions/errcode.Error"
+            $ref: '#/definitions/errcode.Error'
         "500":
           description: 内部错误
           schema:
-            $ref: "#/definitions/errcode.Error"
+            $ref: '#/definitions/errcode.Error'
       summary: 获取单篇文章
     put:
       consumes:
-        - application/json
+      - application/json
       parameters:
-        - description: 文章ID
-          in: path
-          name: id
-          required: true
-          type: integer
-        - description: 更新文章请求
-          in: body
-          name: request
-          required: true
-          schema:
-            $ref: "#/definitions/model.UpdateArticleRequest"
+      - description: 文章ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: 更新文章请求
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/model.UpdateArticleRequest'
       produces:
-        - application/json
+      - application/json
       responses:
         "200":
           description: 成功
           schema:
-            $ref: "#/definitions/model.ArticleSwagger"
+            $ref: '#/definitions/model.ArticleSwagger'
         "400":
           description: 请求错误
           schema:
-            $ref: "#/definitions/errcode.Error"
+            $ref: '#/definitions/errcode.Error'
         "500":
           description: 内部错误
           schema:
-            $ref: "#/definitions/errcode.Error"
+            $ref: '#/definitions/errcode.Error'
       summary: 更新文章
   /api/v1/tags:
     get:
       parameters:
-        - description: 标签名称
-          in: query
-          maxLength: 100
-          name: name
-          type: string
-        - default: 1
-          description: 状态
-          enum:
-            - 0
-            - 1
-          in: query
-          name: state
-          type: integer
-        - description: 页码
-          in: query
-          name: page
-          type: integer
-        - description: 每页数量
-          in: query
-          name: page_size
-          type: integer
+      - description: 标签名称
+        in: query
+        maxLength: 100
+        name: name
+        type: string
+      - default: 1
+        description: 状态
+        enum:
+        - 0
+        - 1
+        in: query
+        name: state
+        type: integer
+      - description: 页码
+        in: query
+        name: page
+        type: integer
+      - description: 每页数量
+        in: query
+        name: page_size
+        type: integer
       produces:
-        - application/json
+      - application/json
       responses:
         "200":
           description: 成功
           schema:
-            $ref: "#/definitions/model.TagSwagger"
+            $ref: '#/definitions/model.TagSwagger'
         "400":
           description: 请求错误
           schema:
-            $ref: "#/definitions/errcode.Error"
+            $ref: '#/definitions/errcode.Error'
         "500":
           description: 内部错误
           schema:
-            $ref: "#/definitions/errcode.Error"
+            $ref: '#/definitions/errcode.Error'
       summary: 获取多个标签
     post:
       parameters:
-        - description: 创建标签请求
-          in: body
-          name: request
-          required: true
-          schema:
-            $ref: "#/definitions/model.CreateTagRequest"
+      - description: 创建标签请求
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/model.CreateTagRequest'
       produces:
-        - application/json
+      - application/json
       responses:
         "200":
           description: 成功
           schema:
-            $ref: "#/definitions/model.TagSwagger"
+            $ref: '#/definitions/model.TagSwagger'
         "400":
           description: 请求错误
           schema:
-            $ref: "#/definitions/errcode.Error"
+            $ref: '#/definitions/errcode.Error'
         "500":
           description: 内部错误
           schema:
-            $ref: "#/definitions/errcode.Error"
+            $ref: '#/definitions/errcode.Error'
       summary: 新增标签
   /api/v1/tags/{id}:
     delete:
       parameters:
-        - description: 标签ID
-          in: path
-          name: id
-          required: true
-          type: integer
+      - description: 标签ID
+        in: path
+        name: id
+        required: true
+        type: integer
       produces:
-        - application/json
+      - application/json
       responses:
         "200":
           description: 成功
@@ -417,39 +417,39 @@ paths:
         "400":
           description: 请求错误
           schema:
-            $ref: "#/definitions/errcode.Error"
+            $ref: '#/definitions/errcode.Error'
         "500":
           description: 内部错误
           schema:
-            $ref: "#/definitions/errcode.Error"
+            $ref: '#/definitions/errcode.Error'
       summary: 删除标签
     put:
       parameters:
-        - description: 标签ID
-          in: path
-          name: id
-          required: true
-          type: integer
-        - description: 更新标签请求
-          in: body
-          name: request
-          required: true
-          schema:
-            $ref: "#/definitions/model.UpdateTagRequest"
+      - description: 标签ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: 更新标签请求
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/model.UpdateTagRequest'
       produces:
-        - application/json
+      - application/json
       responses:
         "200":
           description: 成功
           schema:
-            $ref: "#/definitions/model.TagSwagger"
+            $ref: '#/definitions/model.TagSwagger'
         "400":
           description: 请求错误
           schema:
-            $ref: "#/definitions/errcode.Error"
+            $ref: '#/definitions/errcode.Error'
         "500":
           description: 内部错误
           schema:
-            $ref: "#/definitions/errcode.Error"
+            $ref: '#/definitions/errcode.Error'
       summary: 更新标签
 swagger: "2.0"
